# clipper

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  ClipperBaseDockerfile  GRPCFrontendDockerfile  ManagementFrontendDockerfile  QueryFrontendDockerfile  ZmqFrontendDockerfile  configure
bench/experiments/metrics_logs/: metrics-report-tsc-rpc-statedbcache-fastinputs.txt  metrics-report-tsc-rpc-statedbcache.txt
clipper_admin/: clipper_manager.py  setup.py
clipper_admin/clipper_admin/: clipper_admin.py  container_manager.py
clipper_admin/clipper_admin/docker/: docker_container_manager.py
containers/python/: noop_container.py  rpc.py
grpc_client_py/: clipper_frontend_pb2.py  clipper_frontend_pb2_grpc.py  clipper_grpc_client.py  grpc_benchmark.py
model-comp-apps/text-driver-1/containerized/: driver.py
model-comp-apps/text-driver-1/containerized/containers/: build_docker_images.sh
model_composition/: setup_env.sh
model_composition/composition_utils/: setup.py
model_composition/composition_utils/composition_utils/: __init__.py
model_composition/container_utils/: CudaPyRpcDockerfile  RpcDockerfile  TfRpcDockerfile  TheanoRpcDockerfile  rpc.py
model_composition/containerized_utils/: setup.py
model_composition/containerized_utils/containerized_utils/: __init__.py
model_composition/containerized_utils/containerized_utils/driver_utils/: driver_utils.py
model_composition/containerized_utils/containerized_utils/zmq_client/: clipper_zmq_client.py
model_composition/image_driver_1/containerized/: README.md  driver.py
model_composition/image_driver_1/containerized/containers/: InceptionFeaturizationDockerfile  LgbmDockerfile  VggElasticNetDockerfile  VggFeaturizationDockerfile  VggKernelSvmDockerfile  VggKpcaSvmDockerfile  VggSvmDockerfile  build_docker_images.sh
model_composition/resnet-cascade/containerized/: driver.py
model_composition/resnet-cascade/containerized/containers/: AlexnetPyTorchDockerfile  PyTorchDockerfile  Res152PyTorchDockerfile  (+3 more)
model_composition/single_proc_utils/: setup.py
model_composition/text-driver-1/containerized/: README.md  driver.py
model_composition/zmq_client/: clipper_zmq_client.py  setup.py
model_composition/zmq_client/zmq_client/: clipper_zmq_client.py
model_composition/zmq_client/zmq_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
patches/: boringssl.patch  include_grpc.patch
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/src/: bench_utils.cpp  bench_utils.hpp  end_to_end_bench.cpp  rpc_protocol_test.cpp  rpc_service_bench.cpp
src/frontends/src/: query_frontend.hpp  query_frontend_tests.cpp
src/libclipper/: CMakeLists.txt
src/libclipper/src/: containers.cpp  datatypes.cpp  json_util.cpp  metrics.cpp  persistent_state.cpp  query_processor.cpp  redis.cpp  rpc_service.cpp  selection_policies.cpp  task_executor.cpp
src/libclipper/test/: container_test.cpp  data_serialization_tests.cpp  redis_test.cpp
src/libs/: CMakeLists.txt
src/management/src/: management_frontend.hpp  management_frontend_tests.cpp
src/rest_frontend/src/: query_frontend.hpp  query_frontend_main.cpp  query_frontend_tests.cpp
src/rpc_frontend/: CMakeLists.txt
src/rpc_frontend/src/: grpc_frontend.hpp  grpc_frontend_main.cpp
src/rpc_frontend/src/protos/: clipper_frontend.proto
src/zmq_frontend/: CMakeLists.txt
src/zmq_frontend/src/: frontend_rpc_service.cpp  frontend_rpc_service.hpp  zmq_frontend.hpp  zmq_frontend_main.cpp
zmq_client_py/: clipper_zmq_client.py  setup.py  zmq_benchmark.py
zmq_client_py/bench/: zmq_benchmark.py
zmq_client_py/clipper_zmq_client/: __init__.py  clipper_zmq_client.py
(+70 files in other folders)
